# BorisEngine2

./: .gitignore  BorisEngine2.sln  LICENSE
BorisEngine2/: Aliases.h  Animation.h  BooleanCarrier.h  BorisConsoleManager.cpp  BorisConsoleManager.h  BorisConstants.h  BorisEngine2.vcxproj  BorisEngine2.vcxproj.filters  BorisExternalInterface.cpp  BorisExternalInterface.h  BorisOperations.cpp  BorisOperations.h  CMakeLists.txt  CSRand.h  Circle.h  DigitSprite.cpp  DigitSprite.h  ExternalResourceManager.cpp  ExternalResourceManager.h  FloatRect.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  Line.cpp  Line.h  LineEquation.h  Makefile  NAN.c  PointsCounter.cpp  PointsCounter.h  Renderable.h  SDL_Window_Manager.cpp  SDL_Window_Manager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  (+18 more)
BorisEngine2/DebugLib/: BorisEngine2.idb
BorisEngine2/DebugLib/BorisEngine2.tlog/: BorisEngine2.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
BorisEngine2/ReleaseLib/BorisEngine2.tlog/: BorisEngine2.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
BorisUnitTests/: BorisUnitTests.vcxproj  BorisUnitTests.vcxproj.filters  MiscTests.cpp  MiscTests.h  OpsTest.cpp  OpsTest.h  OutputGUI.cpp  OutputGUI.h  SpriteTests.cpp  SpriteTests.h  Tests.cpp  Tests.h  program.cpp
DebugLib/: CppUtil.lib
